--- a/admin/src/pages/newHotel/newHotel.scss
+++ b/admin/src/pages/newHotel/newHotel.scss
@@ -13,6 +13,11 @@
       margin: 20px;
       display: flex;
 
+      .no-img {
+        width: 200px;
+        height: 200px;
+      }
+
       h1 {
         color: lightgray;
         font-size: 20px;
@@ -21,13 +26,6 @@
       .left {
         flex: 1;
         text-align: center;
-
-        img {
-          width: 100px;
-          height: 100px;
-          border-radius: 50%;
-          object-fit: cover;
-        }
       }
 
       .right {
@@ -39,6 +37,19 @@
           flex-wrap: wrap;
           gap: 30px;
           justify-content: space-between;
+
+          .selectRooms{
+            width: 100%;
+
+            select {
+              width: 100%;
+              padding: 6px;
+                
+              option{
+                background-color: transparent;
+              }
+            }
+          }
 
           .formInput {
             width: 40%;
